--- a/labs/03 HTML5/comparison.html
+++ b/labs/03 HTML5/comparison.html
@@ -3,6 +3,11 @@
 <head>
     <title>Comparison of three computers</title>
     <meta charset="utf-8" />
+    <style>
+        table, th, td {
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
 <p>A comparison of technical data of three popular 80's home computers:</p>
@@ -14,7 +19,8 @@
         <th>Property</th>
         <th>Commodore 64</th>
         <th>ZX Spectrum</th>
-        <th>Commodore VIC-20</th>    
+        <th>Commodore VIC-20</th>
+        <th>Spectravideo SV-328</th>
     </tr>
     </thead>
     <tbody>
@@ -23,18 +29,31 @@
         <td>MOS Technology 6510</td>
         <td>Zilog Z80</td>
         <td>MOS Technology 6502</td>
+        <td>Zilog Z80A</td>
     </tr>
     <tr>
         <td>RAM</td>
         <td>64 kilobytes</td>
         <td>16 or 64 kilobytes</td>
         <td>5 kilobytes</td>
+        <td>64 kilobytes</td>
     </tr>
     <tr>
         <td>ROM</td>
         <td>20 kilobytes</td>
         <td>16 kilobytes</td>
         <td>16 kilobytes</td>
+        <td>32 kilobytes</td>
+    </tr>
+    <tr>
+        <td>Main usage</td>
+        <td colspan="4">Home computing</td>
+    </tr>
+    <tr>
+        <td>Killer game</td>
+        <td colspan="2">Jet Set Willy</td>
+        <td>Jelly Monsters</td>
+        <td>Armoured Assault</td>
     </tr>
     </tbody>
 </table>
