--- a/labs/03 HTML5/comparison.html
+++ b/labs/03 HTML5/comparison.html
@@ -3,15 +3,16 @@
 <head>
     <title>Comparison of three computers</title>
     <meta charset="utf-8" />
+    <link href="css/compcss.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-<p>A comparison of technical data of three popular 80's home computers:</p>
+<p>A comparison of <paksu>technical data</paksu> of three popular 80's home computers:</p>
 
 <table>
     <caption>Technical comparison</caption>
     <thead>
     <tr>
-        <th>Property</th>
+        <th class="rb">Property</th>
         <th>Commodore 64</th>
         <th>ZX Spectrum</th>
         <th>Commodore VIC-20</th>
@@ -20,32 +21,32 @@
     </thead>
     <tbody>
     <tr>
-        <td>CPU</td>
+        <td class="rb">CPU</td>
         <td>MOS Technology 6510</td>
         <td>Zilog Z80</td>
         <td>MOS Technology 6502</td>
         <td>Zilog Z80A</td>
     </tr>
     <tr>
-        <td>RAM</td>
+        <td class="rb">RAM</td>
         <td>64 kilobytes</td>
         <td>16 or 64 kilobytes</td>
         <td>5 kilobytes</td>
         <td>64 kilobytes</td>
     </tr>
     <tr>
-        <td>ROM</td>
+        <td class="rb">ROM</td>
         <td>20 kilobytes</td>
         <td>16 kilobytes</td>
         <td>16 kilobytes</td>
         <td>32 kilobytes</td>
     </tr>
     <tr>
-        <td>Main usage</td>
+        <td class="rb">Main usage</td>
         <td colspan="4">Home computing</td>
     </tr>
     <tr>
-        <td>Killer game</td>
+        <td class="rb">Killer game</td>
         <td colspan="2">Jet Set Willy</td>
         <td>Jelly Monsters</td>
         <td>Armoured Assault</td>
