--- a/labs/03 HTML5/johndoe.html
+++ b/labs/03 HTML5/johndoe.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>John Doe</title>
-    <style>
-        table, th, td {
-            border: 1px solid black;
-        }
-    </style>
+    <link href="css/johndoe.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
 
 <article>
     <h1>Homepage of John Doe</h1>
 
-    <figure>
+    <figure id="floating">
         <img src="img/johndoe.png" alt="John Doe"/>
     </figure>
     <table>
