--- a/labs/07 JavaScript Language/object_methods.html
+++ b/labs/07 JavaScript Language/object_methods.html
@@ -29,11 +29,12 @@ var fiat = {
 	},
 
 	drive: function() {
+
 		if (this.started) {
 			if (this.fuel > 0) {
 				console.log(this.make + " " +
-				      this.model + " goes zoom zoom!");
-				this.fuel = this.fuel - 1;
+                    this.model + " goes zoom zoom!");
+				updateFuel();
 			} else {
 				console.log("Uh oh, out of fuel.");
 				this.stop();
@@ -41,6 +42,9 @@ var fiat = {
 		} else {
 			console.log("You need to start the engine first.");
 		}
+        function updateFuel() {
+            fiat.fuel = fiat.fuel - 1;
+        }
 	},
 
 	addFuel: function(amount) {
