--- a/labs/07 JavaScript Language/simple_function.html
+++ b/labs/07 JavaScript Language/simple_function.html
@@ -14,7 +14,9 @@
 	    <fieldset><legend>Enter an Item To Be Done</legend>
 	        <div><label for="task">Task</label><input type="text" name="task" id="task" required></div>
 	        <input type="submit" value="Add It!" id="submit">
+
 	  <div id="output"></div>
+			<input type="button" onclick="removeDuplicate()" value="Remove Duplicates" id="duplicate">
 	    </fieldset>
 	</form>
     <script src="js/tasks.js"></script>
