--- a/labs/09 Single-Page Applications/building_lists.html
+++ b/labs/09 Single-Page Applications/building_lists.html
@@ -2,9 +2,28 @@
 <html>
 <head>
     <title>Building Lists</title>
+    <style>
+        table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        td, th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #dddddd;
+        }
+    </style>
 </head>
 <body>
-
+<div>
+    <h1 id="titteli"></h1>
+</div>
 </body>
 <script src="js/building_lists.js"></script>
 </html>
