--- a/labs/09 Single-Page Applications/simple_dom.html
+++ b/labs/09 Single-Page Applications/simple_dom.html
@@ -11,10 +11,10 @@
 	</div>
 	<h1></h1>
 	<div id="userForm">
-		<p><input type="text" placeholder="Name" /></p>
-		<p><input type="email" placeholder="Email" /></p>
+		<p><input class="tekstii" type="text" tag placeholder="Name" /></p>
+		<p><input class="tekstii" type="email" placeholder="Email" /></p>
 		<p><input type="password" placeholder="Password" /></p>
-		<p><button id="save">Save</button></p>
+	<!--	<p><button id="save">Save</button></p> --!>
 	</div>
 </body>
 <script src="js/simple_dom.js"></script>
