--- a/labs/10 JavaScript Modules/js_classes.html
+++ b/labs/10 JavaScript Modules/js_classes.html
@@ -33,14 +33,59 @@ function Coffee(roast, ounces) {
 	};
 }
 
+function Tea(type, ounces) {
+    this.type = type;
+    this.ounces = ounces;
+    this.getSteepTime = function() {
+        if (this.ounces === 1) {
+            return "short";
+        } else if (this.ounces === 2) {
+            return "normal";
+        } else if (this.ounces === 3) {
+            return "long";
+        }
+    };
+    this.order = function () {
+        var message;
+        switch (this.getSteepTime()) {
+            case "short":
+            case "normal":
+            case "long":
+                message = "You'va ordered a " + this.type + " with " + this.getSteepTime() + " steep time.";
+                break;
+            default:
+                message = "We don't steep " + this.type + " for that amount of time.";
+        }
+        return message;
+    };
+}
+
+Coffee.prototype.sip = function () {
+    console.log("Hmm, tasty. ");
+}
+
+Tea.prototype.sip = function () {
+    console.log("Hmm, tasty. ");
+
+}
+
 var coffee = new Coffee("House Blend", 12);
 console.log(coffee.order());
-
+coffee.sip();
 var darkRoast = new Coffee("Dark Roast", 16);
 console.log(darkRoast.order());
-
+coffee.sip();
 var specialBlend = new Coffee("Special Blend", 200);
 console.log(specialBlend.order());
+
+var tea = new Tea("Green Tea", 1);
+console.log(tea.order());
+tea.sip();
+var tea = new Tea("Black Tea", 2);
+console.log(tea.order());
+tea.sip();
+var tea = new Tea("Chamomile Tea", 10);
+console.log(tea.order());
 
 </script>
 </head>
