--- a/labs/12 Introduction to PHP/order.html
+++ b/labs/12 Introduction to PHP/order.html
@@ -27,14 +27,13 @@ function ajaxFunction(){
 	// Create a function that will receive data sent from the server
 	ajaxRequest.onreadystatechange = function(){
 		if(ajaxRequest.readyState == 4){
-			document.myForm.time.value = ajaxRequest.responseText;
+			//document.myForm.time.value = ajaxRequest.responseText;
+			document.getElementById("teksti").innerHTML = ajaxRequest.responseText;
 		}
 	}
 	ajaxRequest.open("GET", "php/serverTime.php", true);
-	ajaxRequest.send(null); 
+	ajaxRequest.send(null);
 }
-
-
 </script>
 
 <form name='myForm'>
@@ -42,6 +41,8 @@ Name: <input type='text' onChange="ajaxFunction();" name='username' /> <br />
 Time: <input type='text' name='time' />
 
 </form>
+<button onclick="ajaxFunction()">Nappi</button>
+<p id="teksti"></p>
 </body>
 </html>
 
