--- a/labs/12 Introduction to PHP/suggestions.html
+++ b/labs/12 Introduction to PHP/suggestions.html
@@ -9,7 +9,7 @@ function showHint(str) {
         var xmlhttp = new XMLHttpRequest();
         xmlhttp.onreadystatechange = function() {
             if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-                document.getElementById("txtHint").innerHTML = xmlhttp.responseText;
+                document.getElementById("txtHint").innerHTML = JSON.parse(xmlhttp.responseText);
             }
         };
         xmlhttp.open("GET", "php/gethint.php?q=" + str, true);
