--- a/labs/15 RESTful API/php/test.html
+++ b/labs/15 RESTful API/php/test.html
@@ -3,19 +3,34 @@
   <head>
     <meta charset="utf-8"/>
     <title>geogram</title>
+    <script>
+      function xml() {
+        var xmlhttp = new XMLHttpRequest();
+        xmlhttp.onreadystatechange = function() {
+          if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+            //alert(JSON.parse(xmlhttp.responseText));
+              alert("asd");
+          } else {
+              alert("dsa");
+          }
+        };
+        xmlhttp.open("GET", "php/geogram.php", true);
+        xmlhttp.send();
+      }
+    </script>
   </head>
   <body>
       
   <!-- call a Javascript function to send an XMLHttpRequest -->
   
-  <form action="geogram.php" method="get">
+  <form>
     <input type="text" name="location"/>
-    <button type="submit">Submit</button>
+    <button type="submit" onclick="xml()">Submit</button>
   </form>
     <br/>
     
  <!-- make a Javascript callback to handle the request when it arrives -->
- 
+<!--
     <?php
     if(!empty($instagram_array)){
       foreach($instagram_array['data'] as $key=>$image){
@@ -23,5 +38,6 @@
       }
     }
     ?>
+    -->
   </body>
 </html>
